--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
     padding: 30px;
     border-radius: 20px;
     width: 90%;
-    max-width: 400px;
+    max-width: 90vw;
 }
 
 img {
@@ -58,8 +58,9 @@ button {
     <button class="no" id="noBtn" onclick="respuestaNo()">No</button>
 </div>
 
-<div class="container" id="screen3" style="display:none;">
+<div class="container" id="screen3" style="display:none; position:relative; overflow:hidden;">
     <h1>✨ Te espero para ese día mi princesa ✨</h1>
+    <div class="effects"></div>
 </div>
 <script>
 let tamañoSi = 1;
